--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,13 @@
         "ratio": "cpp",
         "xthread": "cpp",
         "thread": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
+        "span": "cpp",
+        "stop_token": "cpp"
     }
 }
