--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 **/*.lib filter=lfs diff=lfs merge=lfs -text
 **/*.pdb filter=lfs diff=lfs merge=lfs -text
 **/*.ttf filter=lfs diff=lfs merge=lfs -text
+**/*.ttc filter=lfs diff=lfs merge=lfs -text
