--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 **/*.pdb filter=lfs diff=lfs merge=lfs -text
 **/*.ttf filter=lfs diff=lfs merge=lfs -text
 **/*.ttc filter=lfs diff=lfs merge=lfs -text
+**/*.png filter=lfs diff=lfs merge=lfs -text
